--- a/numpy-exercises.ipynb
+++ b/numpy-exercises.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -39,15 +39,15 @@
      "output_type": "stream",
      "text": [
       "[1 2 3 4]\n",
-      "[[3 3 5]\n",
-      " [9 4 4]]\n",
-      "[[[6 5 2]\n",
-      "  [0 8 0]\n",
-      "  [7 7 9]]\n",
+      "[[1 9 9]\n",
+      " [1 3 7]]\n",
+      "[[[7 5 0]\n",
+      "  [7 1 1]\n",
+      "  [4 8 5]]\n",
       "\n",
-      " [[4 6 9]\n",
-      "  [2 5 4]\n",
-      "  [1 7 6]]]\n"
+      " [[5 8 5]\n",
+      "  [9 5 1]\n",
+      "  [0 3 2]]]\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "dtype('int32')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "(2, 3)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "dtype('int32')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "       [1., 1.]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "        [1., 1., 1.]]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "       85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,22 +268,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[6, 3],\n",
-       "       [6, 3],\n",
-       "       [2, 6],\n",
-       "       [9, 3],\n",
-       "       [3, 1],\n",
-       "       [1, 8],\n",
-       "       [3, 0]])"
+       "array([[3, 3],\n",
+       "       [0, 2],\n",
+       "       [8, 0],\n",
+       "       [5, 6],\n",
+       "       [7, 7],\n",
+       "       [3, 7],\n",
+       "       [8, 4]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,18 +296,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.14999658, 0.61779718, 0.90088122, 0.55349068, 0.83598733],\n",
-       "       [0.87640664, 0.71922328, 0.20499563, 0.99455078, 0.4424458 ],\n",
-       "       [0.63774723, 0.96670039, 0.0828482 , 0.98173783, 0.7726486 ]])"
+       "array([[0.51415977, 0.7033433 , 0.06264219, 0.91689678, 0.27404142],\n",
+       "       [0.93342767, 0.15511482, 0.08864285, 0.2704874 , 0.86282247],\n",
+       "       [0.77578782, 0.73623056, 0.05656501, 0.63209562, 0.09016308]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
        "        0.36636184]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,22 +361,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_var = np.random.randint(10, size =(2,5))\n",
+    "\n",
+    "#np.unique(a_var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 2, 3, 4, 5, 6, 8, 9])"
+       "6"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.unique(a_var)"
+    "# Find the 0'th index of the latest array you created\n",
+    "a_var[0][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 6, 3, 8, 2]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the first 2 rows of latest array you created\n",
+    "a_var[:1][:1]"
    ]
   },
   {
@@ -385,25 +418,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find the 0'th index of the latest array you created\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get the first 2 rows of latest array you created\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get the first 2 values of the first 2 rows of the latest array\n"
+    "# Get the first 2 values of the first 2 rows of the latest array\n",
+    "a_var[:2]"
    ]
   },
   {
